<resources>
    <string name="app_name">Fitness</string>
    <string name="top_level_destination_activity">Activity</string>
    <string name="top_level_destination_schedule">Schedule</string>
    <string name="top_level_destination_settings">Settings</string>
</resources>