<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="exercise_categories_top_navigation_bar_title">Exercise categories</string>
    <string name="exercise_categories_add_category_button">Add category</string>
</resources>